added admission placeholder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p>Opening door for knowledge</p>
     <div id="searchbar">Search placeholder</div>
     <div class="details">
-        <label for="AdmissionNo">Admission Number</label>
+        <label for="AdmissionNo">Admission Number</label><br>
+        <input type="text" id="AdmissionNo" placeholder="Admission Number">
 
     
 
