added bookname placeholder

--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
     <p>Opening door for knowledge</p>
     <div id="searchbar">Search placeholder</div>
     <div class="details">
-        <label for="AdmissionNo">Admission Number</label><br>
-        <input type="text" id="AdmissionNo" placeholder="Admission Number">
-
-    
-
-
-
-
-    </div>
+        <label for="AdmissionNo">Admission Number*</label><br>
+        <input type="text" id="AdmissionNo" placeholder="Admission Number"><br>
+        <label for="BookName">Book Name*</label><br>
+        <input type="text" id="BookName" placeholder="Enter BookName"><br>
+    </div><br><br>
     <div id="button">
         <button>Return</button>
     </div>
