--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <div class="name">
         <p>Full name*</p>
-        <input type="text" placeholder="Full Names" name="" id="">
-
+        <input required type="text" placeholder="Full Names" name="" id="">
+        <p>Admission Number*</p>
+        <input required type="text" placeholder="Admision Number" name="" id="">
+        <p>Email Address*</p>
+        <input required type="text" placeholder="Email Address">
+        <p>Phone*</p>
+        <input type="text" required placeholder="Phone Number">
     </div>
 </body>
 </html>
