pt:body-a sign up form wwill be added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Library_Management System</title>
+    <title>Library Management System</title>
 </head>
 <body>
-    
-</body>
+    <div class="sign_up_form">
+        <h2>Sign Up Now</h2>
+        <form>
+            <input type="Full name*" class="input-box" placeholder="Enter Full name"> <br>
+            <input type="Username*" class="input-box" placeholder="Enter Full name"> <br>
+            <input type="Email Address*" class="input-box" placeholder="Enter Full name"> <br>
+            <input type="password*" class="input-box" placeholder="Enter Full name"> <br>
+            <input type="Confirm Password*" class="input-box" placeholder="Enter Full name"> <br>
+             <p>  Agree to terms of service  </p>
+        </form>
+    </div>
+ 
+        
+    </body>
 </html>
