--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Return Page</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
     <div class="Navbar">
-        <img src="images/BOOKS.png" width="100px">
+        <img src="images/BOOKS.png" width="100px" id="img1">
         <div class="heading">
             <h1 id="h1">Royal Library</h1>
             <p id="p1">Opening door for knowledge</p>
