--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <p>Phone*</p>
         <input type="text" required placeholder="Phone Number">
     </div>
+    <div class="create_button">
+        <input type="button" value="Create Account" id="create" onclick="createAccount()">
+    </div>
 </body>
 </html>
