ft:body-added html for the dashboard

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <h2>Sign Up Now</h2>
         <form>
             <input type="Full name*" class="input-box" placeholder="Enter Full name"> <br>
-            <input type="Username*" class="input-box" placeholder="Enter Full name"> <br>
-            <input type="Email Address*" class="input-box" placeholder="Enter Full name"> <br>
-            <input type="password*" class="input-box" placeholder="Enter Full name"> <br>
-            <input type="Confirm Password*" class="input-box" placeholder="Enter Full name"> <br>
+            <input type="Username*" class="input-box" placeholder="Enter Username"> <br>
+            <input type="Email Address*" class="input-box" placeholder="Enter Email Addresse"> <br>
+            <input type="password*" class="input-box" placeholder="Enter password"> <br>
+            <input type="Confirm Password*" class="input-box" placeholder="Confirm Password"> <br>
              <p>  Agree to terms of service  </p>
         </form>
+        <button class="signup_btn">sign up</button>
     </div>
  
         
