ft: Added the logo image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
         </div>
 
+        <!--A div for the logo-->
+        <div class="logo">
+            <img src="images/BOOKS.png" alt="">
+
+        </div>
+
 
     </div>
     
