modified button div and styled the button

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         <label for="BookName">Book Name*</label><br>
         <input type="text" id="BookName" placeholder="Enter BookName"><br>
     </div><br><br>
-    <div id="button">
-        <button>Return</button>
-    </div>
+   
+
+        <button id="button">Return</button>
+    
 
 </body>
 
