st:details Adding padding and margin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title></title>
 </head>
 <body>
-    <div class="name">
+    <div class="details">
         <p>Full name*</p>
         <input required type="text" placeholder="Full Names" name="" id="">
         <p>Admission Number*</p>
