st:button adding padding and margin

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title></title>
 </head>
 <body>
-    <div class="details">
-        <p>Full name*</p>
-        <input required type="text" placeholder="Full Names" name="" id="">
-        <p>Admission Number*</p>
-        <input required type="text" placeholder="Admision Number" name="" id="">
-        <p>Email Address*</p>
-        <input required type="text" placeholder="Email Address">
-        <p>Phone*</p>
-        <input type="text" required placeholder="Phone Number">
-    </div>
+    <form >
+        <div class="details">
+            <p>Full name*</p>
+            <input required type="text" placeholder="Full Names" name="" id="">
+            <p>Admission Number*</p>
+            <input required type="text" placeholder="Admision Number" name="" id="">
+            <p>Email Address*</p>
+            <input required type="text" placeholder="Email Address">
+            <p>Phone*</p>
+            <input type="text" required placeholder="Phone Number">
+        </div>
+    </form>
     <div class="create_button">
         <input type="button" value="Create Account" id="create" onclick="createAccount()">
-    </div>
+    </div>   
 </body>
 </html>
