--- a/index.html
+++ b/index.html
@@ -11,38 +11,36 @@
     <div class="row-1">
         <div class="col-1">
             <div class="row-2">
-                <div class="col-2-1">
-                    <img src="images/BOOKS.png" alt="logo image">
+                <div class="col-1-1">
+                    <img src="images/BOOKS.png" alt="logo image" id="logo">
                 </div>
-                <div class="col-2-2">
+                <div class="col-1-2">
                     <h1>Royal Library</h1>
                     <p>Opening the door to knowledge</p>
                 </div>
             </div>
             <div class="row-3">
-                <div class="create-account">
-                    <img src="images/user-circle-solid.svg" alt="creating account logo">
+                <div class="create-account card">
+                    <img src="images/user-circle-solid.svg" alt="creating account logo" class="icons">
                     <p class="description">Create Student Account</p>
                 </div>
-                <div class="book-borrow">
-                    <img src="images/icons8-open-book-64.png" alt="open book logo">
+                <div class="book-borrow card">
+                    <img src="images/icons8-open-book-64.png" alt="open book logo" class="icons">
                     <p class="description">Book Borrowing</p>
                 </div>
             </div>
             <div class="row-4">
-                <div class="book-return">
-                    <img src="images/icons8-book-50.png" alt="closed book logo">
+                <div class="book-return card">
+                    <img src="images/icons8-book-50.png" alt="closed book logo" class="icons">
                     <p class="description">Book Return</p>
                 </div>
             </div>
         </div>
         <div class="col-2">
-            <img src="images/books-5937823_960_720.webp" alt="Library Image">
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <p>All Rights Reserved 2022 @Royal Library</p>
-    </div>
-    
+    </footer>    
 </body>
 </html>
