st:form styling-styling of the form is optimized

--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Library Management System</title>
 </head>
 <body>
-    <div class="sign_up_form">
+    <img src="images/BOOKS.png" alt="">
+    <div class="sign_up_form">      
         <h2>Sign Up Now</h2>
         <form>
-            <input type="Full name*" class="input-box" placeholder="Enter Full name"> <br>
-            <input type="Username*" class="input-box" placeholder="Enter Username"> <br>
+            <p> Full Name</p>
+        <input type="Full name*" class="input-box" placeholder="Enter Full name"> </li><br>
+        <p> Username*</p>
+         <input type="Username*" class="input-box" placeholder="Enter Username"> <br>
+         <p> Email Address*</p>
             <input type="Email Address*" class="input-box" placeholder="Enter Email Addresse"> <br>
+          <p>password</p>
             <input type="password*" class="input-box" placeholder="Enter password"> <br>
+            <p>Confirm Password* </p>
             <input type="Confirm Password*" class="input-box" placeholder="Confirm Password"> <br>
-             <p>  Agree to terms of service  </p>
+             <p> <span><input type="checkbox"></span> I agree to terms of service  </p>
         </form>
         <button class="signup_btn">sign up</button>
     </div>
