st:paragraph-optimized styling for paragraph

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="sign_up_form">      
         <h2>Sign Up Now</h2>
         <form>
-            <p> Full Name</p>
+            <p> Full Name*</p>
         <input type="Full name*" class="input-box" placeholder="Enter Full name"> </li><br>
         <p> Username*</p>
          <input type="Username*" class="input-box" placeholder="Enter Username"> <br>
          <p> Email Address*</p>
             <input type="Email Address*" class="input-box" placeholder="Enter Email Addresse"> <br>
-          <p>password</p>
+          <p>password*</p>
             <input type="password*" class="input-box" placeholder="Enter password"> <br>
             <p>Confirm Password* </p>
             <input type="Confirm Password*" class="input-box" placeholder="Confirm Password"> <br>
