pt: Modified the buttons in the adm,book,serial,and ls classses

--- a/index.html
+++ b/index.html
@@ -19,11 +19,43 @@
         
 
         <div class="word">
-            <h3>Royal Library </h3> 
+            <h2>Royal Library </h2> 
             <p>Opening the door to knowledge </p>
         </div>
 
     </div>
+
+    <div class="adm">
+        <h3>Admission Number *</h3>
+        <button></button>
+
+    </div>
+
+    <div class="Book">
+        <h3>Book Name *</h3>
+        <button></button>
+
+    </div>
+
+    <div class="serial">
+        <h3>Serial Number *</h3>
+        <button></button>
+
+    </div>
+
+    <div class="ls">
+
+    <div class="date">
+        <h3>Date Borrowed *</h3>
+        <button></button>
+
+    </div>
+
+    <div class="last">
+        <button>Submit</button>
+
+    </div>
+</div>
 
             
 
