--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title></title>
 </head>
 <body>
+    <div id="top_text">
+        <h1>Royal Library</h1>
+        <h5>Openning the door to knowledge</h5>
+    </div>
+    <div class="top_image">
+        <img src="./images/BOOKS.png" alt="">
+    </div>
     <form >
         <div class="details">
             <p>Full name*</p>
@@ -17,7 +24,8 @@
             <p>Email Address*</p>
             <input required type="text" placeholder="Email Address">
             <p>Phone*</p>
-            <input type="text" required placeholder="Phone Number">
+            <input type="number" required placeholder="Phone Number">
+     
         </div>
     </form>
     <div class="create_button">
