fix background: add overlay to background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="whole" style="background-image: url('images/books-5937823_960_720.webp'); filter: contrast(30%); filter: brightness(40%);">
+    <div class="whole">
+    <!-- style="background-image: url('images/books-5937823_960_720.webp'); filter: contrast(30%); filter: brightness(30%);" -->
         <div class="pics">
             <div class ="logo">
                 <img src="images/BOOKS.png" style="height: 20vh; width: 20vh;">
