fix footer - remove the padding between the footer and the section above it

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 </div>
             </div>
             <div class="row-3">
+                <a href="#">
+                    
+                </a>
                 <div class="create-account card">
                     <img src="images/user-circle-solid.svg" alt="creating account logo" class="icons">
                     <p class="description">Create Student Account</p>
