It will form the logo structure.

--- a/index.html
+++ b/index.html
@@ -9,3 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" href="style.css">
   <title>Royal Library</title>
+</head>
+<img class="logo" src="images/BOOKS.png" alt="logo">
+<body>
+  <div class="top">    
+    <p>Welcome to Royal Library</p>
+  </div>
