It will form the text box structure.

--- a/index.html
+++ b/index.html
@@ -15,3 +15,20 @@
   <div class="top">    
     <p>Welcome to Royal Library</p>
   </div>
+
+  <div class="top2">
+    <p>Let's Give You a Read</p>
+  </div>
+  
+  <form>
+    <div id="name">
+      <p>USERNAME</p> 
+      <input type="text" class="username"  placeholder="Enter Username">
+    </div>
+  
+    <div id="password">
+      <p>PASSWORD</p>
+      <input type="password" class="pass" placeholder="Enter Password">
+    </div>
+  </form>
+  
