It will form the button and footer structure

--- a/index.html
+++ b/index.html
@@ -32,3 +32,14 @@
     </div>
   </form>
   
+
+  <div class="option">
+    <p>Dont have an account? Click <a href="https://www.youtube.com/watch?v=IKvFz-IlB5k">here</a> to sign up.</p>
+  </div>
+
+  <input type="button" value="LOGIN" id="btn" onclick="inButton()" > 
+
+</div>
+
+</body>
+</html>
