style: styled borders

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Royal Library</h1>
         <h5>Openning the door to knowledge</h5>
     </div>
-    <div class="top_image">
+    <div id="top_image">
         <img src="./images/BOOKS.png" alt="">
     </div>
     <form >
