--- a/create.html
+++ b/create.html
@@ -10,7 +10,7 @@
 <body>
     <div id="top_text">
         <h1>Royal Library</h1>
-        <h5>Openning the door to knowledge</h5>
+        <h5>Opening the door to knowledge</h5>
     </div>
     <div id="top_image">
         <img src="./images/BOOKS.png" alt="">
