pt: Added a new href link for landing pageindex.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- style="background-image: url('images/books-5937823_960_720.webp'); filter: contrast(30%); filter: brightness(30%);" -->
         <div class="pics">
             <div class ="logo">
-                <img src="images/BOOKS.png" style="height: 20vh; width: 20vh;">
+                <img src="images/BOOKS.png">
             </div>
             <div class="word">
                 <h2>Royal Library </h2>
@@ -20,6 +20,7 @@
             </div>
         </div>
         <form name="borrowBooks">
+            <div>
             <div class="labels">
                 <h3>Admission Number *</h3>
                 <input type="text" name="adm" id="admNumber" required>
@@ -38,8 +39,15 @@
             </div>
             <div class="blue">
                 <input type="submit" value="Submit" id="sub">
+           </div>
+        </div>
+
+            <div class="sidepic">
+                <img src="images/pexels-element-digital-1370298.jpg" style="height: 90vh; width: 90vh;">
+
             </div>
         </form>
+        <a href="#">LANDINGPAGE</a>
     </div>
 </body>
 </html>
