--- a/login.html
+++ b/login.html
@@ -1,45 +1,139 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-    </style>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link rel="stylesheet" href="style.css">
-  <title>Royal Library</title>
-</head>
-<img class="logo" src="images/BOOKS.png" alt="logo">
-<body>
-  <div class="top">    
-    <p>Welcome to Royal Library</p>
-  </div>
+body {
+  background-color: #5D78A1;
+}
 
-  <div class="top2">
-    <p>Let's Give You a Read</p>
-  </div>
+.top {
+  position: absolute;
+  width: 547px;
+  height: 56px;
+  left: 250px;
+  top: 50px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+
+  color: #FFFFFF;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.top2 {
+  position: absolute;
+  width: 345px;
+  height: 42px;
+  left: 355px;
+  top: 126px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 42px;
+
+  color: #FFFFFF;
+
+}
+
+.logo {
+  position: absolute;
+  width: 145px;
+  height: 132px;
+  left: 20px;
+  top: 27px;
+
+  background: url(BOOKS.png);
+}
+
+#name {
+  position: absolute;
+  width: 126px;
+  height: 24px;
+  left: 202px;
+  top: 240px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+
+  color: #FFFFFF;
+}
+
+#password {
+  position: absolute;
+  width: 127px;
+  height: 28px;
+  left: 202px;
+  top: 350px;
+
+  font-family: roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+
+  color: #FFFFFF;
+
+}
+
+.option {
+  position: absolute;
+  width: 359px;
+  height: 21px;
+  left: 356px;
+  top: 511px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+
+}
+
+.username {
+  position: absolute;
+  width: 426px;
+  height: 54px;
+  left: 150px;
+  top: 15px;
   
-  <form>
-    <div id="name">
-      <p>USERNAME</p> 
-      <input type="text" class="username"  placeholder="Enter Username">
-    </div>
-  
-    <div id="password">
-      <p>PASSWORD</p>
-      <input type="password" class="pass" placeholder="Enter Password">
-    </div>
-  </form>
-  
+  background: #E0FFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  border: none;
+}
 
-  <div class="option">
-    <p>Dont have an account? Click <a href="https://www.youtube.com/watch?v=IKvFz-IlB5k">here</a> to sign up.</p>
-  </div>
+.pass {
+  position: absolute;
+width: 426px;
+height: 54px;
+left: 150px;
+top: 15px;
 
-  <input type="button" value="LOGIN" id="btn" onclick="inButton()" > 
+background: #E0FFFF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 15px;
+border: none;
+}
 
-</div>
+#btn {
+  position: absolute;
+  width: 166px;
+  height: 53px;
+  left: 485px;
+  top: 460px;
+  content: Login;
 
-</body>
-</html>
+  background: #E0FFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  text-align: center;
+  font-family: roboto;
+  border:none ;
+}
