pt: Modified files from the other branches

--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="SignUp.css">
+    <link rel="stylesheet" href="/css/SignUp.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Library Management System</title>
 </head>
 <body>
-    <img src="images/BOOKS.png" alt="">
+    <img src="/images/BOOKS.png" alt="">
     <div class="sign_up_form">      
         <h2>Sign Up Now</h2>
         <form name="sign-up" id="sign-up-id">
@@ -28,10 +28,11 @@
             <input type="checkbox" id= "checkbox2" onclick="clickFunction1()">Show Password   
 
              <p> <span><input type="checkbox"></span> I agree to terms of service . </p>
-             <input type="submit" value="Submit" class="signup_btn"  >
+             <!-- <input type="submit" value="Submit" class="signup_btn"></a> -->
+             <button ><a href="login.html">SIGNUP</a></button>
         </form>
     </div>
  
-   <script src="SignUp.js"></script>
+   <script src="/js/SignUp.js"></script>
     </body>
 </html>
