--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royal Library</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/dashboard.css">
 </head>
 <body>
     <div class="row-1">
         <div class="col-1">
             <div class="row-2">
                 <div class="col-1-1">
-                    <img src="images/BOOKS.png" alt="logo image" id="logo">
+                    <img src="/images/BOOKS.png" alt="logo image" id="logo">
                 </div>
                 <div class="col-1-2">
                     <h1>Royal Library</h1>
@@ -23,19 +23,20 @@
                 <a href="#">
                     
                 </a>
-                <div class="create-account card">
-                    <img src="images/user-circle-solid.svg" alt="creating account logo" class="icons">
-                    <p class="description">Create Student Account</p>
+                <div class="create-account card" >
+                    
+                    <img src="/images/user-circle-solid.svg" alt="creating account logo" class="icons">
+                    <p class="description"><a href="create.html">Create Student Account</a></p>
                 </div>
                 <div class="book-borrow card">
-                    <img src="images/icons8-open-book-64.png" alt="open book logo" class="icons">
-                    <p class="description">Book Borrowing</p>
+                    <img src="/images/icons8-open-book-64.png" alt="open book logo" class="icons">
+                    <p class="description"><a href="bookborrow.html">Book Borrowing</a></p>
                 </div>
             </div>
             <div class="row-4">
                 <div class="book-return card">
-                    <img src="images/icons8-book-50.png" alt="closed book logo" class="icons">
-                    <p class="description">Book Return</p>
+                    <img src="/images/icons8-book-50.png" alt="closed book logo" class="icons">
+                    <p class="description"><a href="returnpage.html">Book Return</a></p>
                 </div>
             </div>
         </div>
