--- a/html/create.html
+++ b/html/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="create.css">
+    <link rel="stylesheet" href="/css/create.css">
     <title></title>
 </head>
 <body>
@@ -13,7 +13,8 @@
         <h5>Opening the door to knowledge</h5>
     </div>
     <div id="top_image">
-        <img src="./images/BOOKS.png" alt="">
+        <img src="/images/BOOKS.png" alt="">
+        <a href="dashboard.html">HOME</a>
     </div>
     <form >
         <div class="details">
@@ -30,6 +31,7 @@
     </form>
     <div class="create_button">
         <input type="button" value="Create Account" id="create" onclick="createAccount()">
-    </div>   
+    </div> 
+    <script src="/js/create.js"></script>  
 </body>
 </html>
