--- a/html/login.html
+++ b/html/login.html
@@ -7,10 +7,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="/css/login.css">
   <title>Royal Library</title>
 </head>
-<img class="logo" src="images/BOOKS.png" alt="logo">
+<img class="logo" src="/images/BOOKS.png" alt="logo">
 <body>
   <div class="top">    
     <p>Welcome to Royal Library</p>
@@ -30,17 +30,21 @@
       <p>PASSWORD</p>
       <input type="password" class="pass" id="password1" placeholder="Enter Password" required>
     </div>
-    <input type="submit" value="LOGIN" id="btn" onclick="validate()" > 
+    <!-- <input type="submit" value="LOGIN" id="btn" onclick="validate()" > -->
+   
   </form>
   
 
   <div class="option">
-    <p>Dont have an account? Click <a href="https://www.youtube.com/watch?v=IKvFz-IlB5k">here</a> to sign up.</p>
+    <button ><a href="dashboard.html">LOGIN</a></button>
+    <p>Dont have an account? Click <a href="SignUp.html">here</a> to sign up.</p>
+    
   </div>
+
 
   
 
 </div>
-<script src="login.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
