pt: Modified the signup.html path

--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -29,7 +29,7 @@
 
              <p> <span><input type="checkbox"></span> I agree to terms of service . </p>
              <!-- <input type="submit" value="Submit" class="signup_btn"></a> -->
-             <button ><a href="login.html">SIGNUP</a></button>
+             <button ><a href="../index.html">SIGNUP</a></button>
         </form>
     </div>
  
